--- a/output/team.html
+++ b/output/team.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">>
+        <meta charset="utf-8">
         <title>Jon's Team</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Bootstrap / Font Awesome-->
@@ -29,7 +29,19 @@
         <ul class="list-group">
             <li class="list-group-item">Employee ID: 19</li>
             <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:jon@gmail.com">jon@gmail.com</a></li>
-            <li class="list-group-item">Office Number: (905)580-1919</li>
+            <li class="list-group-item">Office Number: 12324</li>
+        </ul>
+    </div>
+</div><div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Ethan</h2>
+        <h3 class="card-title"><i class="fas fa-code-branch mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">Employee ID: 22</li>
+            <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:e@e.com">e@e.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jshallcross">jshallcross</a></li>
         </ul>
     </div>
 </div>
