Intern cards created

--- a/output/team.html
+++ b/output/team.html
@@ -27,21 +27,57 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">Employee ID: 19</li>
+            <li class="list-group-item"><i class="far fa-id-card mr-2"></i>Employee ID: 19</li>
             <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:jon@gmail.com">jon@gmail.com</a></li>
-            <li class="list-group-item">Office Number: 12324</li>
+            <li class="list-group-item"><i class="fas fa-phone mr-2"></i>Office Number: (905)555-5555</li>
         </ul>
     </div>
 </div><div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Ethan</h2>
+        <h2 class="card-title">Jax</h2>
         <h3 class="card-title"><i class="fas fa-code-branch mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">Employee ID: 22</li>
-            <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:e@e.com">e@e.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/jshallcross">jshallcross</a></li>
+            <li class="list-group-item"><i class="far fa-id-card mr-2"></i>Employee ID: 12</li>
+            <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:jax@gmail.com">jax@gmail.com</a></li>
+            <li class="list-group-item"><i class="fab fa-github-square mr-2"></i>GitHub: <a href="https://github.com/jax123">jax123</a></li>
+        </ul>
+    </div>
+</div><div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Madison</h2>
+        <h3 class="card-title"><i class="fas fa-code-branch mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item"><i class="far fa-id-card mr-2"></i>Employee ID: 26</li>
+            <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:maddy@gmail.com">maddy@gmail.com</a></li>
+            <li class="list-group-item"><i class="fas fa-school mr-2"></i>School: MM</li>
+        </ul>
+    </div>
+</div>,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Ethan</h2>
+        <h3 class="card-title"><i class="fas fa-code-branch mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item"><i class="far fa-id-card mr-2"></i>Employee ID: 05</li>
+            <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:ethan@gmail.com">ethan@gmail.com</a></li>
+            <li class="list-group-item"><i class="fas fa-school mr-2"></i>School: Florance</li>
+        </ul>
+    </div>
+</div>,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Justice</h2>
+        <h3 class="card-title"><i class="fas fa-code-branch mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item"><i class="far fa-id-card mr-2"></i>Employee ID: 30</li>
+            <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:just@gmail.com">just@gmail.com</a></li>
+            <li class="list-group-item"><i class="fas fa-school mr-2"></i>School: Florance</li>
         </ul>
     </div>
 </div>
