--- a/output/team.html
+++ b/output/team.html
@@ -17,22 +17,25 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 d-flex justify-content-center">
-                    <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Jon</h2>
-        <h3 class="card-title"><i class="fas fa-tasks mr-2"></i>Manager</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item"><i class="far fa-id-card mr-2"></i>Employee ID: 19</li>
-            <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:jon@gmail.com">jon@gmail.com</a></li>
-            <li class="list-group-item"><i class="fas fa-phone mr-2"></i>Office Number: (905)555-5555</li>
-        </ul>
-    </div>
-</div><div class="card employee-card">
+        
+        <div class="container" >
+            <div class="row ">
+                <div class=" d-flex justify-content-center"id="team-container">
+                    <div class="card employee-card col-lg-3 m-2" >
+                    <div class="card-header">
+                        <h2 class="card-title">Jon</h2>
+                        <h3 class="card-title"><i class="fas fa-tasks mr-2"></i>Manager</h3>
+                    </div>
+                    <div class="card-body">
+                    <ul class="list-group">
+                        <li class="list-group-item"><i class="far fa-id-card mr-2"></i>Employee ID: 19</li>
+                        <li class="list-group-item"><i class="far fa-envelope mr-2"></i>Email: <a href="mailto:jon@gmail.com">jon@gmail.com</a></li>
+                        <li class="list-group-item"><i class="fas fa-phone mr-2"></i>Office Number: (905)555-5555</li>
+                    </ul>
+                    </div>
+                </div>
+
+<div class="card employee-card col-lg-3 m-2">
     <div class="card-header">
         <h2 class="card-title">Jax</h2>
         <h3 class="card-title"><i class="fas fa-code-branch mr-2"></i>Engineer</h3>
@@ -44,7 +47,10 @@
             <li class="list-group-item"><i class="fab fa-github-square mr-2"></i>GitHub: <a href="https://github.com/jax123">jax123</a></li>
         </ul>
     </div>
-</div><div class="card employee-card">
+</div>
+
+
+<div class="card employee-card col-lg-3 m-2">
     <div class="card-header">
         <h2 class="card-title">Madison</h2>
         <h3 class="card-title"><i class="fas fa-code-branch mr-2"></i>Intern</h3>
@@ -56,7 +62,10 @@
             <li class="list-group-item"><i class="fas fa-school mr-2"></i>School: MM</li>
         </ul>
     </div>
-</div>,<div class="card employee-card">
+</div>
+
+
+<div class="card employee-card col-lg-3 m-2">
     <div class="card-header">
         <h2 class="card-title">Ethan</h2>
         <h3 class="card-title"><i class="fas fa-code-branch mr-2"></i>Intern</h3>
@@ -68,7 +77,10 @@
             <li class="list-group-item"><i class="fas fa-school mr-2"></i>School: Florance</li>
         </ul>
     </div>
-</div>,<div class="card employee-card">
+</div>
+
+
+<div class="card employee-card col-lg-3 m-2">
     <div class="card-header">
         <h2 class="card-title">Justice</h2>
         <h3 class="card-title"><i class="fas fa-code-branch mr-2"></i>Intern</h3>
